--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,7 +1,7 @@
 name: Bug report
 description: Create a report to help us improve
-labels:
-  - bug
+title: "[Bug]: "
+labels: ["bug"]
 body:
   - type: textarea
     id: describe
@@ -28,7 +28,7 @@ body:
         2. Click on '....'
 
         3. Scroll down to '....'
-        
+
         4. See error
     validations:
       required: true
